Fix some header spacing

--- a/css/_project-custom.scss
+++ b/css/_project-custom.scss
@@ -1843,10 +1843,20 @@ li {
 p + .usa-accordion,
 h2 + *,
 h3 + *,
-h4 + * {
+h4 + *,
+h5 + *,
+h6 + * {
   margin-top: units(2);
 }
 
 .usa-sidenav a {
   padding-right: units(0.5);
+}
+
+* + .usa-accordion {
+  margin-top: units(2);
+}
+
+.usa-accordion-heading + .usa-accordion-content {
+  margin-top: 0;
 }
